[ 김하연 ] 기능추가: 검색 기능에서 작성자 검색 옵션 추가
