# swagger/swagger.yaml
@@ -174,7 +174,71 @@ paths:
                   message:
                     type: string
                     example: SIGNED_OUT_SUCCESS
-
+  /board/{id}:
+    get:
+      summary: 게시판 게시글 목록 조회
+      consumes: application/json
+      produces: application/json
+      parameters:
+        - in: path
+          name: id
+          description: 게시판 번호
+          required: true
+          example: 1
+      responses:
+        200:
+          description: 게시글 정상 조회 완료
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  post:
+                    type: array
+                    items:
+                      $ref: "#/definitions/Post"
+  /board/{id}/post:
+    post:
+      summary: 게시글 작성
+      consumes: application/json
+      produces: application/json
+      parameters:
+        - in: path
+          name: id
+          description: 게시판 번호
+          required: true
+          example: 1
+        - in: body
+          name: body
+          description: 게시글 작성할 때 필요한 데이터 - url은 필수 X
+          required: true
+          schema:
+            type: object
+            properties:
+              title:
+                type: string
+                example: 글 제목
+                required: true
+              content:
+                type: string
+                example: 글 내용
+                required: true
+              url:
+                type: array
+                description: 삭제할 이미지 url 배열
+                example: ["https://hufsweb.s3.ap-northeast-2.amazonaws.com/post/1614328320100sasa.jpg","https://hufsweb.s3.ap-northeast-2.amazonaws.com/post/1614328320100xz.jpg"]
+                required: false
+      responses:
+        201:
+          description: 게시글 작성
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: 게시글 작성 완료
 definitions:
   User:
     type: object
@@ -192,3 +256,50 @@ definitions:
       webMail:
         type: string
         example: dlxogus0417
+  Post:
+    type: object
+    properties:
+      id:
+        type: integer
+        description: 글 번호
+        example: 1
+      title:
+        type: string
+        description: 글 제목
+        example: 제목
+      content:
+        type: string
+        description: 글 내용
+        example: <p>안녕</p>
+      like:
+        type: integer
+        description: 좋아요 개수
+        exapmle: 32
+      report:
+        type: integer
+        description: 신고 개수 / 5회 이상일 경우 숨김 처리
+        example: 2
+      createdAt:
+        type: date
+        description: 글 생성 날짜 및 시간
+        example: 2021-03-14T06:21:29.000Z
+      updatedAt:
+        type: date
+        description: 글 마지막으로 업데이트된 시간
+        example: 2021-03-14T06:21:29.000Z
+      boardId:
+        type: integer
+        description: 게시판 아이디
+        example: 1
+      userId:
+        type: integer
+        description: 글 작성한 유저의 아이디
+        example: 1
+      User:
+        type: object
+        properties:
+          nickname:
+            type: string
+            description: 글 작성한 유저의 닉네임
+            example: 하연
+
